# mysqlite

./: CMakeLists.txt  command.c  command.h  common.c  input.c  input.h  main.c  main_cp.c  memcpy_main.cpp  statement.c  statement.h  table.c  table.h  tree_node.c  tree_node.h
mysqlite-test/: duplicate_key.rb  help.txt  print  print_constants.rb
